--- a/Style/style.css
+++ b/Style/style.css
@@ -124,7 +124,7 @@ i.fa-sharp {
   font-size: 20px;
   padding-top: 42px;
   cursor: pointer;
-  transition: height 2ss ease-in-out; }
+  transition: height 2s ease-in-out; }
 
 .coeur2 {
   width: 20px;
