--- a/Style/sass/components/_badge.scss
+++ b/Style/sass/components/_badge.scss
@@ -56,7 +56,8 @@
     font-size: 20px;
     padding-top: 42px;
     cursor: pointer;
-    transition: height 2ss ease-in-out;
+    transition: height 2s ease-in-out;
+
     }
 
 .coeur2 {
