--- a/Style/sass/pages/_menu_palette.scss
+++ b/Style/sass/pages/_menu_palette.scss
@@ -27,6 +27,7 @@
     width: 40px;
     padding-top: 0;
     margin-top: 0;
+    margin-bottom: -7px;
 }
 
 .margin-bottom {
@@ -149,11 +150,11 @@
 }
 
 .font-weight100 {
-    padding-left: 12rem;
+    padding-left: 112px;
 }
 
 .souligne {
-    margin-left: 12rem;
+    margin-left: 112px;
 }
 
 .gap {
