--- a/Style/sass/components/_badge.scss
+++ b/Style/sass/components/_badge.scss
@@ -15,6 +15,7 @@
             display: inline-block;
             width: 20px;
             height: 20px;
+            transform: 2s;
         }
  
         .custom-checkbox input[type="checkbox"]:checked ~ .unchecked
@@ -22,6 +23,7 @@
             display: none;
             width: 20px;
             height: 20px;
+            transition: 1s;
         }
 
         .custom-checkbox {
@@ -30,24 +32,16 @@
             padding-right: 3rem;
         }
 
-        @keyframes fillFromRight {
-            0% { width: 0; }
-            100% { width: 100%; }
-        }
-
 .icon-heart {
     width: 100%;
-    transition: height 2s ease-in-out;
 }
 
 .coeur {
     width: 20px;
     height: 20px;
-    transition: height 2s ease-in-out;
 }
 
     .far {
-    /*position: relative;*/
     padding-right: 64px;
     display: flex;
     color: black;
@@ -56,19 +50,16 @@
     font-size: 20px;
     padding-top: 42px;
     cursor: pointer;
-    transition: height 2s ease-in-out;
-
+    transform: opacity 0;
     }
 
 .coeur2 {
     width: 20px;
     height: 20px;
     margin-right: 2rem;
-    transition: height 2s ease-in-out;
 }
     
 .fas {
-    /*position: absolute;*/
     display: flex;
     color: violet;
     justify-content: space-between;
@@ -78,7 +69,6 @@
     padding-right: 2rem;
     padding-top: 32px;
     cursor: pointer;
-    transition: height 2s ease-in-out;
     }
 
 .fa-arrow-left {
