--- a/Style/style.css
+++ b/Style/style.css
@@ -79,60 +79,52 @@ i.fa-sharp {
   display: flex;
   align-items: center; }
 
-.custom-checkbox input[type="checkbox"],
-.custom-checkbox .checked {
-  display: none;
-  width: 20px;
-  height: 20px; }
-
-.custom-checkbox input[type="checkbox"]:checked ~ .checked {
-  display: inline-block;
-  width: 20px;
-  height: 20px; }
-
-.custom-checkbox input[type="checkbox"]:checked ~ .unchecked {
-  display: none;
+.checkbox {
+  display: flex;
   width: 20px;
   height: 20px;
-  transition: 1s; }
+  position: absolute;
+  bottom: 13px;
+  right: 15px; }
 
-.custom-checkbox {
+.checkboxMenu {
+  display: flex;
   width: 20px;
   height: 20px;
-  padding-right: 3rem; }
-
-.icon-heart {
-  width: 100%; }
-
-.coeur {
-  width: 20px;
-  height: 20px; }
+  padding-right: 45px; }
 
 .far {
-  padding-right: 64px;
   display: flex;
   color: black;
-  justify-content: space-between;
-  align-items: center;
-  font-size: 20px;
-  padding-top: 42px;
-  cursor: pointer; }
-
-.coeur2 {
   width: 20px;
   height: 20px;
-  margin-right: 2rem; }
+  font-size: 20px;
+  cursor: pointer; }
 
 .fas {
   display: flex;
-  color: violet;
-  justify-content: space-between;
-  justify-content: center;
+  width: 21px;
+  height: 20px;
+  background-image: linear-gradient(#FF79DA, #9356DC);
   align-items: center;
   font-size: 21px;
-  padding-right: 2rem;
-  padding-top: 32px;
-  cursor: pointer; }
+  cursor: pointer;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+  position: absolute; }
+
+.fas:hover {
+  opacity: 1;
+  color: transparent;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text; }
+
+.fas:not(:hover) {
+  transition: opacity 1s ease-in-out;
+  opacity: 0;
+  color: transparent;
+  background-image: linear-gradient(#FF79DA, #9356DC);
+  -webkit-background-clip: text; }
 
 .fa-arrow-left {
   display: flex;
@@ -584,7 +576,8 @@ body {
 .row {
   display: flex;
   flex-direction: row;
-  justify-content: space-between; }
+  justify-content: space-between;
+  align-items: center; }
 
 .main-pal {
   background-color: #F6F6F6;
