--- a/Style/style.css
+++ b/Style/style.css
@@ -117,14 +117,16 @@ i.fa-sharp {
   opacity: 1;
   color: transparent;
   background-image: linear-gradient(#FF79DA, #9356DC);
-  -webkit-background-clip: text; }
+  -webkit-background-clip: text; 
+  background-clip: text;}
 
 .fas:not(:hover) {
   transition: opacity 1s ease-in-out;
   opacity: 0;
   color: transparent;
   background-image: linear-gradient(#FF79DA, #9356DC);
-  -webkit-background-clip: text; }
+  -webkit-background-clip: text;
+  background-clip: text; }
 
 .fa-arrow-left {
   display: flex;
